package com.wavesplatform.protobuf

package object dapp {

  type PBDapp = com.wavesplatform.protobuf.dapp.DApp
  val PBDapp = com.wavesplatform.protobuf.dapp.DApp

  type PBArr = com.wavesplatform.protobuf.dapp.DApp.Arr
  val PBArr = com.wavesplatform.protobuf.dapp.DApp.Arr

  type PBBlock = com.wavesplatform.protobuf.dapp.DApp.Block
  val PBBlock = com.wavesplatform.protobuf.dapp.DApp.Block

  type PBDeclaration = com.wavesplatform.protobuf.dapp.DApp.Declaration
  val PBDeclaration = com.wavesplatform.protobuf.dapp.DApp.Declaration

  type PBEvaluated = com.wavesplatform.protobuf.dapp.DApp.Evaluated
  val PBEvaluated = com.wavesplatform.protobuf.dapp.DApp.Evaluated

  type PBExpr = com.wavesplatform.protobuf.dapp.DApp.Expr
  val PBExpr = com.wavesplatform.protobuf.dapp.DApp.Expr

  type PBFunc = com.wavesplatform.protobuf.dapp.DApp.Func
  val PBFunc = com.wavesplatform.protobuf.dapp.DApp.Func

  type PBFunctionCall = com.wavesplatform.protobuf.dapp.DApp.FunctionCall
  val PBFunctionCall = com.wavesplatform.protobuf.dapp.DApp.FunctionCall

  type PBGetter = com.wavesplatform.protobuf.dapp.DApp.Getter
  val PBGetter = com.wavesplatform.protobuf.dapp.DApp.Getter

  type PBIf = com.wavesplatform.protobuf.dapp.DApp.If
  val PBIf = com.wavesplatform.protobuf.dapp.DApp.If

  type PBLet = com.wavesplatform.protobuf.dapp.DApp.Let
  val PBLet = com.wavesplatform.protobuf.dapp.DApp.Let

  type PBLetBlock = com.wavesplatform.protobuf.dapp.DApp.LetBlock
  val PBLetBlock = com.wavesplatform.protobuf.dapp.DApp.LetBlock

  type PBCaseObj = com.wavesplatform.protobuf.dapp.DApp.CaseObj
  val PBCaseObj = com.wavesplatform.protobuf.dapp.DApp.CaseObj

  type PBFunction = com.wavesplatform.protobuf.dapp.DApp.Function
  val PBFunction = com.wavesplatform.protobuf.dapp.DApp.Function
}
